Fix item research in Hal Link (after click on bubble) (ConfigDefault.js, HalsearchCtrl.js app.min.js) Fix slide bar z-index (style.css)

--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,11 @@ display: none;
 #datatablecontainer td{
   background-color: #00B5AD!important;
 }
+
+.low {
+	z-index:2;
+}
+
+.high {
+	z-index:1;
+}
